[package]
name = "collision_prophet"
version = "0.1.0"
authors = ["Maciej Srokowski <srokowski.maciej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "collision_prophet"
crate-type = ["dylib"]

[dependencies]
ncollide3d = "0.21.0"
nalgebra   = "0.19"
